# appcore-key-provider

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
src/appcore/key_provider/: __init__.py  key_provider.py  secret_provider.py
tests/: test_key_provider.py
